--- a/Đổi tiền tệ.ipynb
+++ b/Đổi tiền tệ.ipynb
@@ -2,24 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f687409b",
+   "execution_count": 2,
+   "id": "6171994e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hãy nhập nhiệt độ cần đổi32\n",
-      "Nhiệt độ khi chuyển thanh độ f là:  89.6\n"
+      "Mời nhập số tiền!2000\n",
+      "Hãy nhập tỉ giá hôm nay23015\n",
+      "Số tiền bạn đổi được là:  46030000.0 VND\n"
      ]
     }
    ],
    "source": [
-    "# Bài thực hành chuyển đổi nhiệt độ\n",
-    "c = input('Hãy nhập nhiệt độ cần đổi')\n",
-    "f = (9*(int(c))/5)+32\n",
-    "print('Nhiệt độ khi chuyển thanh độ f là: ', f)"
+    "# Bài tập đổi tiền tệ\n",
+    "USD = float(input('Mời nhập số tiền!'))\n",
+    "ti_gia = float(input('Hãy nhập tỉ giá hôm nay'))\n",
+    "VND = USD * ti_gia\n",
+    "print('Số tiền bạn đổi được là: ', VND, 'VND')"
    ]
   }
  ],
